# gem-bot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  bot.py  calendar_manager.py  calendar_tools.py  history_manager.py  i18n.py  latex_renderer.py  pyproject.toml  table_renderer.py  tasks_tools.py
.opencode/plans/: README_split.md  add_repo_note.md
cogs/: commands.py
locales/: en.json  ja.json
