[project]
name = "gemini-discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.4",
    "google>=3.0.0",
    "google-genai>=1.52.0",
    "python-dotenv>=1.2.1",
    # Google Calendar API dependencies
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]
